Added Search Functionality in GetAllEmployees
